@@ -2,8 +2,13 @@ package com.sereneoasis.video;
 
 import com.github.javafaker.Faker;
 import com.sereneoasis.SereneRPG;
+import com.sksamuel.scrimage.ImmutableImage;
+import com.sksamuel.scrimage.nio.AnimatedGif;
+import com.sksamuel.scrimage.nio.AnimatedGifReader;
+import com.sksamuel.scrimage.nio.ImageSource;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
+import org.bukkit.entity.Player;
 import org.bytedeco.javacv.FFmpegFrameGrabber;
 import org.bytedeco.javacv.Frame;
 import org.bytedeco.javacv.FrameGrabber;
@@ -22,10 +27,12 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.LinkedList;
 
 public class VideoFrameGrabber {
 
-    private ArrayList<BufferedImage> frames = new ArrayList<>();
+    private LinkedList<BufferedImage> frames = new LinkedList<>();
 
     private BufferedImage cloneOriginal(BufferedImage displayImage){
         BufferedImage copyOfImage = new BufferedImage(displayImage.getWidth(), displayImage.getHeight(), BufferedImage.TYPE_INT_RGB);
@@ -35,9 +42,28 @@ public class VideoFrameGrabber {
 
     }
 
+    public static final HashMap<Player, VideoFrameGrabber> videos = new HashMap<>();
+
+    private void stop(){
+        Bukkit.getScheduler().cancelTasks(SereneRPG.plugin);
+        if (currentVideo.exists()) {
+            currentVideo.delete();
+        }
+    }
+
+    private File currentVideo;
+
     public VideoFrameGrabber(String urlString) throws MalformedURLException, FrameGrabber.Exception {
+        Player player =Bukkit.getPlayer("Sakrajin");
+        if (videos.containsKey(player)) {
+            videos.get(player).stop();
+        }
+
         Faker faker = new Faker();
-        String fileName = faker.name().firstName() + ".mp4";
+        String[] splitByDot = urlString.split("\\.");
+        String extension = splitByDot[splitByDot.length-1];
+        String fileName = faker.name().firstName() + "." + extension;
+
 
         Bukkit.broadcastMessage("Commencing download");
         Bukkit.getScheduler().runTaskAsynchronously(SereneRPG.plugin, () -> {
@@ -45,13 +71,17 @@ public class VideoFrameGrabber {
             try {
                 url = new URL(urlString);
 
-                if (new File(fileName).exists()) {
-
-                    new File(fileName).delete();
+                if (currentVideo !=null && currentVideo.exists()) {
+                    currentVideo.delete();
                 }
                 try (InputStream in = url.openStream()) {
                     Files.copy(in, Paths.get(fileName));
-                    playVideoAfterDelay(fileName);
+                    currentVideo = new File(fileName);
+                    if (extension.equals("gif")){
+                        playGifAfterDelay();
+                    } else {
+                        playVideoAfterDelay();
+                    }
                 } catch (IOException e) {
                     throw new RuntimeException(e);
                 }
@@ -62,29 +92,70 @@ public class VideoFrameGrabber {
             }
 
         });
-
-
     }
 
     private MapStitcher mapStitcher;
 
-    private void playVideoAfterDelay(String fileName){
+    private void playGifAfterDelay(){
         Bukkit.getScheduler().runTaskLaterAsynchronously(SereneRPG.plugin, () -> {
-            if (new File(fileName).exists()) {
+            if (currentVideo.exists()) {
+
+                    Location loc = Bukkit.getPlayer("Sakrajin").getLocation().add(0, 3, 10);
+
+
+                    AnimatedGif gif = null;
+                    try {
+                        gif = AnimatedGifReader.read(ImageSource.of(currentVideo));
+
+                        ImmutableImage firstFrame = gif.getFrame(0);
+
+                        Bukkit.getScheduler().runTask(SereneRPG.plugin, () -> {
+                            mapStitcher = new MapStitcher(loc.clone(), firstFrame.awt());
+                        });
+
+                        long tickDelay = 0;
+
+                        for (int i = 1; i < gif.getFrameCount(); i++) {
+
+                            frames.add(gif.getFrame(i).awt());
+
+                            Bukkit.getScheduler().runTaskLater(SereneRPG.plugin, () -> {
+
+                                mapStitcher.changeImages(frames.getFirst());
+
+                                frames.removeFirst();
+
+                            }, tickDelay);
+                            tickDelay += 1;
+                        }
+                } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+            } else {
+                Bukkit.broadcastMessage("Still downloading");
+
+                playGifAfterDelay();
+            }
+        }, 5);
+    }
+
+    private void playVideoAfterDelay(){
+        Bukkit.getScheduler().runTaskLaterAsynchronously(SereneRPG.plugin, () -> {
+            if (currentVideo.exists()) {
                 try {
-                    FFmpegFrameGrabber g = new FFmpegFrameGrabber(fileName);
+                    FFmpegFrameGrabber g = new FFmpegFrameGrabber(currentVideo);
 
                     g.start();
 
-                    Location loc = Bukkit.getPlayer("Sakrajin").getLocation();
+                    Location loc = Bukkit.getPlayer("Sakrajin").getLocation().add(0, 3, 10);
 
 
                     Java2DFrameConverter converter = new Java2DFrameConverter();
                     g.setFrameNumber(1);
-                    BufferedImage start = converter.getBufferedImage((g.grabFrame()));
+                    final BufferedImage start = converter.getBufferedImage((g.grabFrame()));
 
                     Bukkit.getScheduler().runTask(SereneRPG.plugin, () -> {
-                         mapStitcher = new MapStitcher(loc.clone(), cloneOriginal(start));
+                         mapStitcher = new MapStitcher(loc.clone(), (start));
                     });
 
                     long tickDelay = 0;
@@ -92,18 +163,19 @@ public class VideoFrameGrabber {
                     for (int i = 2; i < g.getLengthInFrames(); i++) {
                         g.setFrameNumber(i);
                         Frame finalFrame = g.grab();
-                        BufferedImage image = converter.getBufferedImage(finalFrame);
-                        frames.add(cloneOriginal(image));
+                        final BufferedImage image = converter.getBufferedImage(finalFrame);
+
+                        frames.add(image);
                         g.setFrameNumber(i);
                         Bukkit.getScheduler().runTaskLater(SereneRPG.plugin, () -> {
-                            mapStitcher.changeImages(frames.get(0));
+                            mapStitcher.changeImages(frames.getFirst());
 //                        MapStitcher mapStitcher2 =  new MapStitcher(loc.clone(), frames.get(0));
-
-                            frames.remove(0);
+                            frames.removeFirst();
 
                         }, tickDelay);
 //                        tickDelay += (long) (g.getFrameRate() / 20);
-                        tickDelay += 20/60 ;
+                        tickDelay+= 1;
+//                        tickDelay += (long) (g.getFrameRate() / 50);
 
 
 //                    if (tickDelay > 100){
@@ -118,9 +190,9 @@ public class VideoFrameGrabber {
             } else {
                 Bukkit.broadcastMessage("Still downloading");
 
-                playVideoAfterDelay(fileName);
+                playVideoAfterDelay();
             }
-        }, 100);
+        }, 5);
     }
 
 }
